<resources>
    <string name="app_name">Renju Edit</string>
    <string name="board">Board</string>
    <string name="setting">Settings</string>
    <string name="storage">Storage</string>

    <string name="error">error</string>
    <string name="loading">Loading</string>

    <string name="undo_all">&#8920;</string>
    <string name="undo">&lt;</string>
    <string name="redo">&gt;</string>
    <string name="redo_all">&#8921;</string>

    <string name="save">Save</string>
    <string name="screenshot">Capture</string>
    <string name="save_external">Save As</string>
    <string name="new_file">New File</string>
    <string name="load">Load File</string>
    <string name="about">About</string>

    <string name="index_here_on">Index here</string>
    <string name="index_here_off">Reset index</string>
    <string name="stone_mode">Stone mode</string>
    <string name="text_mode">Text mode</string>
    <string name="drawing_mode">Drawing mode</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>
    <string name="capture_confirm">Are you sure you want to capture this board?</string>
    <string name="new_file_confirm">Are you sure you want to load a new board?</string>
    <string name="delete_confirm">Are you sure you want to delete this move?</string>
    <string name="delete_drawing_element_confirm">Are you sure you want to delete recent drawing?</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="put_words">Put words</string>
    <string name="put_word_et_hint">maximum 3 letters</string>

    <string name="apply">Apply</string>
    <string name="setting_display">Display</string>
    <string name="setting_color">Color</string>
    <string name="setting_board_color">Board color</string>
    <string name="setting_line_color">Board line color</string>
    <string name="setting_board_text_color">Board text color</string>
    <string name="setting_board_node_color">Board next node color</string>
    <string name="setting_last_stone_color">Last stone color</string>
    <string name="setting_text_box_color">Text box color</string>
    <string name="setting_text_box_stroke_color">Text box stroke color</string>
    <string name="setting_text_box_text_color">Text box text color</string>
    <string name="setting_draw_line_color">Drawing line color</string>
    <string name="setting_draw_area_color">Drawing area color</string>
    <string name="setting_draw_arrow_color">Drawing arrow color</string>

    <string name="setting_sequence_visible">Show sequence</string>
    <string name="setting_text_box_visible">Show text box</string>
    <string name="setting_next_node_visible">Show next node</string>
    <string name="setting_text_mode_on">Use text mode</string>
    <string name="setting_draw_mode_on">Use drawing mode</string>
    <string name="default_setting_warning">Are you sure you want to reset your settings?</string>

    <string name="storage_load">Load</string>
    <string name="storage_delete">Delete</string>
    <string name="storage_load_confirm">Are you sure you want to load this file? The file history you were editing might disappear.</string>
    <string name="storage_delete_confirm">Are you sure you want to delete this item? Even if this item is erased, your files remain in the external storage.</string>
</resources>