<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/round_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/confirm_question"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:textSize="14dp"
        android:fontFamily="@font/spoqa_regular"
        android:text="@string/exit_confirm"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/confirm_noBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="@font/spoqa_regular"
            android:textSize="15dp"
            android:text="@string/no"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/confirm_yesBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="@font/spoqa_regular"
            android:textSize="15dp"
            android:text="@string/yes"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</LinearLayout>