<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/put_text_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/put_words"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:fontFamily="@font/spoqa_regular"/>

    <EditText
        android:id="@+id/put_text_area_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/put_text_title_tv"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/put_word_et_hint"
        android:textAlignment="center"
        android:textSize="14dp"
        android:maxLength="3"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/spoqa_regular"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/put_text_area_et"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/put_text_cancel_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="@font/spoqa_regular"
            android:textSize="15dp"
            android:text="@string/cancel"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/put_text_ok_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="@font/spoqa_regular"
            android:textSize="15dp"
            android:text="@string/ok"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>