<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/board_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:popupTheme="@style/MyToolBarTheme"
                app:titleTextAppearance="@style/Toolbar.TitleText"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/board_container_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/board_toolbar"
                android:background="@color/white">

                <EditText
                    android:id="@+id/board_text_area_et"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="19:2"
                    app:layout_constraintStart_toStartOf="@id/board_board"
                    app:layout_constraintEnd_toEndOf="@id/board_board"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="5dp"
                    android:background="@color/default_blue"
                    android:fontFamily="@font/spoqa_regular"
                    android:gravity="top"
                    android:textCursorDrawable="@drawable/edit_text_cursor"/>

                <com.renju_note.isoo.util.BoardLayout
                    android:id="@+id/board_board"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/board_text_area_et"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="5dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/board_button_container_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/board_container_cl">

                <ImageButton
                    android:id="@+id/board_menu_btn"
                    style="@android:style/Widget.Material.Button.Borderless"
                    android:layout_width="48dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="0"
                    android:padding="13dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/buttons_menu"/>

                <Button
                    android:id="@+id/board_undo_all_btn"
                    style="@android:style/Widget.Material.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/undo_all"
                    android:textColor="@color/default_gray"
                    android:textSize="18dp"
                    android:textStyle="normal"
                    app:backgroundTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpUsage" />

                <Button
                    android:id="@+id/board_undo_btn"
                    style="@android:style/Widget.Material.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/undo"
                    android:textColor="@color/default_gray"
                    android:textSize="18dp"
                    android:textStyle="normal"
                    app:backgroundTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/board_sequence_tv"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0.8"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText,SpUsage" />

                <Button
                    android:id="@+id/board_redo_btn"
                    style="@android:style/Widget.Material.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/redo"
                    android:textColor="@color/default_gray"
                    android:textSize="18dp"
                    android:textStyle="normal"
                    app:backgroundTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpUsage" />

                <Button
                    android:id="@+id/board_redo_all_btn"
                    style="@android:style/Widget.Material.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/redo_all"
                    android:textColor="@color/default_gray"
                    android:textSize="18dp"
                    android:textStyle="normal"
                    app:backgroundTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpUsage" />

                <ImageButton
                    android:id="@+id/board_mode_btn"
                    style="@android:style/Widget.Material.Button.Borderless"
                    android:layout_width="48dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="0"
                    android:padding="14dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/board_stone_mode" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>